# wordslab-notebooks

./: README.md  allow-remote-access-to-wordslab-notebooks.bat  allow-remote-access.bat  generate-secrets.bat  install-wordslab-notebooks.bat  install-wordslab-notebooks.sh  prepare-client-machine.bat  prepare-client-machine.sh  prepare-server-machine.bat  prepare-server-secrets.bat  prepare-server-secrets.sh  start-wordslab-notebooks.bat  start-wordslab-notebooks.sh
dashboard/: dahsboard-spec.ipynb  dashboard-dev.ipynb  dashboard.py  install-dashboard.sh  pyproject.toml  start-dashboard.sh  test-cpu.py  test-gpu.py
dashboard/src/: dashboard-dev.ipynb
docs/: cloud-machines.md  cloud-providers.md  cloud-services.md  external-services.md  guide-openwebui.md  info-install-scripts.md  install-jarvislabs.md  install-local.md  install-runpod.md  install-scripts-reference.md  install-vastai.md  install-windows-client.md  legacy-install.md  legacy-user-manual.md
linux/: 1_1_install-ubuntu-packages.sh  1_2_install-docker.sh  1_2_install-nvidia-container-runtime.sh  1_3-configure-shell-environment.sh  1_3_configure-shell-environment.sh  1__update-operating-system.sh  2_1_install-python-environment.sh  2_1_install-python-envmanager.sh  2_2_install-dashboard.sh  2_2_install-pytorch-cpu.sh  2_2_install-pytorch-cuda.sh  2_3_install-datascience-libs.sh  2_3_install-jupyterlab.sh  2_3_jupyterlab-pyproject.toml  2_4_create-workspace-project  2_4_delete-workspace-project  2_4_install-jupyterlab.sh  2_4_setup-workspace-projects.sh  2_5_datascience-pyproject.toml  3_1_install-ollama.sh  (+35 more)
(+78 files in other folders)
