[project]
name = "dashboard"
version = "0.1.0"
description = "wordslab-notebooks dashboard"
requires-python = ">=3.12"
dependencies = [
    "jlclient",
    "requests",
    "monsterui==1.0.26",
    "pynvml==12.0.0",
    "psutil==7.0.0",
    "ipykernel==6.30.1",
    "ollama==0.6.0",
]

[tool.uv.sources]
jlclient = { git = "https://github.com/jarvislabsai/jlclient.git" }
