[project]
name = "dashboard"
version = "0.1.0"
description = "wordslab-notebooks dashboard"
requires-python = ">=3.12"
dependencies = [
    "jlclient",
    "requests",
    "python-fasthtml==0.13.4",
    "monsterui==1.0.45",
    "pynvml==12.0.0",
    "psutil==7.2.2",
    "ipykernel==7.2.0",
    "ollama==0.6.2",
]

[tool.uv.sources]
jlclient = { git = "https://github.com/jarvislabsai/jlclient.git" }
